--- a/Projeto-Semestral-Prt2/camisetasemaus.html
+++ b/Projeto-Semestral-Prt2/camisetasemaus.html
@@ -165,7 +165,7 @@
                     <h2 class="preco">R$128,00</h2>
                     <p class="parcela">ou 3x de R$42,66</p>
                     <button id="cesta"
-                        onclick="adicionarAoCarrinho('CAMISETA TERRA COMO NO CÉU', 128.00 , 'img/camisceu1.png')"><i
+                        onclick="adicionarAoCarrinho('CAMISETA TERRA COMO NO CÉU', 128.00 , 'img/camisceu1.png.png')"><i
                             class="fa-solid fa-basket-shopping"></i></button>
                 </div>
             </div>
