--- a/Projeto-Semestral-Prt2/loginemaus.html
+++ b/Projeto-Semestral-Prt2/loginemaus.html
@@ -36,7 +36,6 @@
                 <i id="mode_icon" class="fa-solid fa-moon"></i>
             </div>
 
-            
             <div id="social_mediaa">
                 <a href="#">
                     <img src="img/google.png" alt="google logo">
@@ -83,6 +82,7 @@
                         Cancelar
                     </a>
                 </div>
+            </div>
             </div>
 
             <button type="submit" id="login_button">
