--- a/Projeto-Semestral-Prt2/lojaemaus.html
+++ b/Projeto-Semestral-Prt2/lojaemaus.html
@@ -15,7 +15,7 @@
 
   <header>
       <div id="menu-geral">
-          <a id="" href="index.html"><img id="logo-img" src="img/logo-img.png" alt="logo-emaus"></a>
+          <a id="" href="#"><img id="logo-img" src="img/logo-img.png" alt="logo-emaus"></a>
           <span id="burguer" class="material-icons" onclick="clickMenu()">menu</span>
           <menu id="itensMenu">
               <ul>
