--- a/Projeto-Semestral-Prt2/senhaemaus.html
+++ b/Projeto-Semestral-Prt2/senhaemaus.html
@@ -1,67 +1,62 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link class="icone" rel="icon" href="imagens/icone.png">
     <link rel="stylesheet" href="style.css">
 
     <title>login emaus</title>
 </head>
-
 <body>
-    <main id="container_login">
+    <main id="container">
         <form id="login_form">
             <div id="form_header">
-                <a>
-                    <h1>emaus</h1>
-                </a>
+                <a><h1>emaus</h1></a>
                 <i id="mode_icon" class="fa-solid fa-moon"></i>
             </div>
 
-
-            <div class="input-box">
-                <label for="name">
-                    Para recuperar a senha, siga as instruções
-                </label>
-            </div>
-
-            <div class="input-box">
-                <label for="email">
-                    E-mail
-                    <div class="input-field">
-                        <i class="fa-solid fa-envelope"></i>
-                        <input type="email" id="email" name="email">
-                    </div>
-                </label>
-            </div>
-
-            <div class="input-box">
-                <label for="password">
-                    Usuário
-                    <div class="input-field">
-                        <i class="fa-solid fa-user-lock"></i>
-                        <input type="password" id="password" name="password">
-                    </div>
-                </label>
-                <div id="forgot_password">
-                    <a href="loginemaus.html">
-                        Voltar para login
-                    </a>
+            <div id="inputs">
+                <div class="input-box">
+                    <label for="name">
+                        Para recuperar a senha, siga as instruções
+                    </label>
                 </div>
-                <div id="forgot_password">
-                    <a href="index.html">
-                        Cancelar
-                    </a>
+
+                <div class="input-box">
+                    <label for="email">
+                        E-mail
+                        <div class="input-field">
+                            <i class="fa-solid fa-envelope"></i>
+                            <input type="email" id="email" name="email">
+                        </div>
+                    </label>
+                </div>
+
+                <div class="input-box">
+                    <label for="password">
+                        Usuário
+                        <div class="input-field">
+                            <i class="fa-solid fa-user-lock"></i>
+                            <input type="password" id="password" name="password">
+                        </div>
+                    </label>
+                    <div id="forgot_password">
+                        <a href="loginemaus.html">
+                            Voltar para login
+                        </a>
+                    </div>
+                    <div id="forgot_password">
+                        <a href="index.html">
+                            Cancelar
+                        </a>
+                    </div>
                 </div>
             </div>
-
 
             <button type="submit" id="login_button">
                 Solicitar código
@@ -86,26 +81,24 @@
         });
 
         form.addEventListener('submit', function (event) {
-    event.preventDefault();
+            event.preventDefault();
 
-    const email = document.getElementById('email').value;
-    const password = document.getElementById('password').value;
+            const email = document.getElementById('email').value;
+            const username = document.getElementById('password').value;
 
-    // Simulate generating a recovery code (you should do this on the server)
-    const recoveryCode = Math.floor(1000 + Math.random() * 9000);
+            // Simulate generating a recovery code (you should do this on the server)
+            const recoveryCode = Math.floor(1000 + Math.random() * 9000);
 
-    // Armazenar o código gerado em sessionStorage
-    sessionStorage.setItem('recoveryCode', recoveryCode);
-    
-    // Simulate sending an email (you should send an actual email on the server)
-    alert(`Recovery code sent to ${email}. Your code is: ${recoveryCode}`);
+            // Simulate sending an email (you should send an actual email on the server)
+            alert(`Recovery code sent to ${email}. Your code is: ${recoveryCode}`);
 
-    // Redirect the user to a page where they can enter the received code for further recovery steps
-    window.location.href = 'codigoemaus.html';
-});
+            // Here, you would typically send a request to the server to handle the email sending and code generation
+            // You can use fetch or another AJAX library for this purpose
+            // For security reasons, never send actual recovery codes from the client side
 
-
+            // Now, you can redirect the user to a page where they can enter the received code for further recovery steps
+            window.location.href = 'códigoenteremaus.html';
+        });
     </script>
 </body>
-
 </html>
