--- a/Projeto-Semestral-Prt2/codigoemaus.html
+++ b/Projeto-Semestral-Prt2/codigoemaus.html
@@ -10,120 +10,7 @@
     <link class="icone" rel="icon" href="img/icone.png">
     <link rel="stylesheet" href="style.css">
 
-    <!-- <style>
-        body {
-    font-family: 'Poppins', sans-serif;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    min-height: 100vh;
-    background-color: #f0f0f0;
-}
-
-#container {
-    background-color: #fff;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    overflow: hidden;
-    width: 100%;
-    max-width: 400px;
-}
-
-#form_header {
-    background-color: #cdacaa;
-    color: #fff;
-    text-align: center;
-    padding: 20px;
-    border-bottom: 1px solid #bf8b86;
-    
-}
-
-#form_header a {
-    text-decoration: none;
-    color: inherit;
-}
-
-#inputs {
-    padding: 20px;
-}
-
-.input-box {
-    margin-bottom: 15px;
-}
-
-.input-field {
-    position: relative;
-}
-
-.input-field i {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    left: 15px;
-    color: #a8a29e;
-}
-
-.input-field input {
-    width: calc(100% - 40px);
-    padding: 10px;
-    padding-left: 40px;
-    border: 1px solid #a8a29e;
-    border-radius: 5px;
-    outline: none;
-}
-
-#forgot_password {
-    text-align: center;
-    margin-top: 10px;
-}
-
-#forgot_password a {
-    text-decoration: none;
-    color: #a66454;
-}
-
-#forgot_password a:hover {
-    text-decoration: underline;
-}
-
-#submit_button {
-    background-color: #bf8b86;
-    color: #fff;
-    padding: 10px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    width: 100%;
-}
-
-#submit_button:hover {
-    background-color: #a07573;
-}
-
-#mode_icon {
-    cursor: pointer;
-    font-size: 20px;
-    position: absolute;
-    top: 20px;
-    right: 20px;
-}
-
-.dark {
-    background-color: #31201e;
-    color: #fff;
-}
-
-@media screen and (max-width: 768px) {
-    #container {
-        border-radius: 0;
-    }
-}
-
-    </style> -->
-
-    <title>Enter Code - Emaus</title>
+    <title>código emaús</title>
 </head>
 <body>
     <main id="container_login">
