--- a/Projeto-Semestral-Prt2/unissexemaus.html
+++ b/Projeto-Semestral-Prt2/unissexemaus.html
@@ -134,19 +134,19 @@
         <div class="itens-lista">
             <div class="item-caixa">
                 <figure class="trocaItem" id="fig-item">
-                    <img src="img/camispreta1.png" onmouseover="this.
-                            src='img/camispreta2.png'" onmouseout="this.
-                            src='img/camispreta1.png'">
+                    <img src="img/manga01.png" onmouseover="this.
+                            src='img/manga02.png'" onmouseout="this.
+                            src='img/manga01.png'">
                 </figure>
                 <div class="item-conteudo">
-                    <h1 class="nome">CAMISETA DEUS RESPONDE FOGO</h1>
+                    <h1 class="nome">MANGA LONGA HOPE</h1>
                     <h7 class="descricao">Confeccionada em tecido 100% algodão, possui gola careca com acabento em
                         punho, mangas grandes , etiqueta de composição, taglass em Silk , etiquetas na barra e na parte
                         inferior da gola, é estampada com tinta Silk screen na frente e nas costas.</h7>
-                    <h2 class="preco">R$128,00</h2>
-                    <p class="parcela">ou 3x de R$42,66</p>
+                    <h2 class="preco">R$198,00</h2>
+                    <p class="parcela">ou R$188,00 via pix</p>
                     <button id="cesta"
-                        onclick="adicionarAoCarrinho('CAMISETA DEUS RESPONDE FOGO', 128.00, 'img/camispreta1.png')"><i
+                        onclick="adicionarAoCarrinho('MANGA LONGA HOPE', 198.00, 'img/manga01.png')"><i
                             class="fa-solid fa-basket-shopping"></i></button>
                 </div>
             </div>
@@ -154,19 +154,19 @@
             <div class="item-caixa">
 
                 <figure class="trocaItem" id="fig-item">
-                    <img src="img/camisceu1.png" onmouseover="this.
-                            src='img/camisceu2.png'" onmouseout="this.
-                            src='img/camisceu1.png'">
+                    <img src="img/manga03.png" onmouseover="this.
+                            src='img/manga04.png'" onmouseout="this.
+                            src='img/manga03.png'">
                 </figure>
                 <div class="item-conteudo">
-                    <h1 class="nome">CAMISETA TERRA COMO NO CÉU</h1>
+                    <h1 class="nome">MANGA LONGA ÁGUA E FOGO</h1>
                     <h7 class="descricao">Confeccionada em tecido 100% algodão, possui gola careca com acabento em
                         punho, mangas grandes , etiqueta de composição, taglass em Silk , etiquetas na barra e na parte
                         inferior da gola, é estampada com tinta Silk screen na frente e nas costas.</h7>
-                    <h2 class="preco">R$128,00</h2>
-                    <p class="parcela">ou 3x de R$42,66</p>
+                        <h2 class="preco">R$198,00</h2>
+                        <p class="parcela">ou R$188,00 via pix</p>
                     <button id="cesta"
-                        onclick="adicionarAoCarrinho('CAMISETA TERRA COMO NO CÉU', 128.00 , 'img/camisceu1.png.png')"><i
+                        onclick="adicionarAoCarrinho('MANGA LONGA ÁGUA E FOGO', 128.00 , 'img/manga03.png')"><i
                             class="fa-solid fa-basket-shopping"></i></button>
                 </div>
             </div>
@@ -174,19 +174,19 @@
             <div class="item-caixa">
 
                 <figure class="trocaItem" id="fig-item">
-                    <img src="img/camismar1.png" onmouseover="this.
-                                src='img/camismar2.png'" onmouseout="this.
-                                src='img/camismar1.png'">
+                    <img src="img/manga05.png" onmouseover="this.
+                                src='img/manga06.png'" onmouseout="this.
+                                src='img/manga05.png'">
                 </figure>
                 <div class="item-conteudo">
-                    <h1 class="nome">CAMISETA DEUS ABRE O MAR</h1>
+                    <h1 class="nome">MANGA LONGA HALLELUJAH</h1>
                     <h7 class="descricao">Confeccionada em tecido 100% algodão, possui gola careca com acabento em
                         punho, mangas grandes , etiqueta de composição, taglass em Silk , etiquetas na barra e na parte
                         inferior da gola, é estampada com tinta Silk screen na frente e nas costas.</h7>
-                    <h2 class="preco">R$118,00</h2>
-                    <p class="parcela">ou 2x de R$59,00</p>
+                        <h2 class="preco">R$198,00</h2>
+                        <p class="parcela">ou R$188,00 via pix</p>
                     <button id="cesta"
-                        onclick="adicionarAoCarrinho('CAMISETA DEUS ABRE O MAR', 118.00, 'img/camismar1.png')"><i
+                        onclick="adicionarAoCarrinho('MANGA LONGA HALLELUJAH', 118.00, 'img/manga05.png')"><i
                             class="fa-solid fa-basket-shopping"></i></button>
                 </div>
             </div>
